# aws-authenticate-inline

./: .gitignore  README.md  setup.cfg
aws_authenticate_inline/: __init__.py
