[metadata]
name = aws-authenticate-inline
version = 1.0.0
author = Haggai Nuchi
author_email = haggai@haggainuchi.com
url = https://github.com/nuchi/aws-authenticate-inline
description = Authenticate to AWS inline
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = aws, botocore, boto3, authenticate, jupyter, colab
license = MIT

[options]
install_requires =
    botocore >= 1.0
packages = aws_authenticate_inline
setup_requires =
    setuptools >=46.4.0

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
